--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="webboot.io affordable modern websites for startups">
+
     <title>webboot.io</title>
 
     <style media="screen">
