--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
   </head>
   <body>
     <div id="message">
-      <h1>webboot.io</h1>
       <p>Website coming soon</p>
-      visit <a target="_blank" href="https://spudunk.github.io/">spudunk.github.io</a> for more information
+      <p>for more information visit</p>
+       <a target="_blank" href="https://spudunk.github.io/">spudunk.github.io</a>
 
     </div>
   </body>
