--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="webboot.io affordable modern websites for startups">
-
-    <title>webboot.io</title>
-
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #111; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #111; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #111; }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <p>Website coming soon</p>
-      <p>for more information visit</p>
-       <a target="_blank" href="https://spudunk.github.io/">spudunk.github.io</a>
-
-    </div>
-  </body>
-</html>
+<!doctypehtml><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible"content="IE=edge"><meta name="viewport"content="width=device-width,initial-scale=1"><meta name="description"content="webboot.io affordable modern websites for startups"><title>webboot.io</title><link rel="stylesheet"href="style.css"></head><body><div class="header__background"><header class="header container"><a href="/"class="header__logo-container">LOGO</a><div class="header__menu-button"></div></header></div><nav class="nav"></nav><main><section class="hero__background"><div class="hero container"><div class="hero__contents"><a href="/"><h1 class="hero__heading--primary">web<span class="hero__heading--primary-span">boot</span>.io</h1></a><div class="hero__heading--secondary">reboot your brand</div><div class="hero__buttons"><a href="#about"class="button button--light">LEARN MORE</a> <a href="#contact"class="button button--primary">GET STARTED</a></div></div></div></section><section id="about"class="about container shift-down"><h2>About Us</h2><p>We are a digital nomad couple with a passion for helping small businesses develop their online brands.</p><p>We have affordable rates so you can have a professional and modern online presence to build credibility with new customers.</p><p></p></section><section id="work"class="work container shift-down"><h2>Our Work</h2></section><section id="pricing"class="pricing container shift-down"><h2>Pricing</h2><div class="card">Landing Page - $200</div><div class="card">Branding Consult - $200</div><div class="card">Web Management - $50 / month</div><div class="card">Social Media Management - $50 / week</div><div class="card">Content Consultation - $250</div><div class="card">Bigger Projects - $40 / hour</div></section><section id="contact"class="contact container shift-down"><h2>Contact</h2><form id="contact-form"><label for="email">Email</label> <input type="email"name="email"id="email"> <button>Submit</button></form></section></main><footer class="footer container">&copy;2022 Christopher Hicks</footer><script src="index.js"></script></body></html>
