--- a/src/app.html
+++ b/src/app.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<!-- simpleanalytics.com -->
-		<script async defer src="https://sa.webboot.io/latest.js"></script>
-		<noscript><img src="https://sa.webboot.io/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<!-- simpleanalytics.com -->
+		<script async defer data-non-unique-hostnames="checkout.stripe.com" src="https://sa.webboot.io/latest.js"></script>
+		<noscript><img src="https://sa.webboot.io/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 	</body>
 </html>
