add events script

--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,8 @@
 		<div style="display: contents">%sveltekit.body%</div>
 		<!-- simpleanalytics.com -->
 		<script async defer data-non-unique-hostnames="checkout.stripe.com" src="https://sa.webboot.io/latest.js"></script>
+		<script async src="https://sa.webboot.io/auto-events.js"></script>
 		<noscript><img src="https://sa.webboot.io/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+		
 	</body>
 </html>
