--- a/src/app.html
+++ b/src/app.html
@@ -3,13 +3,28 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
+		<!-- Icons -->
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+		<link rel="manifest" href="/site.webmanifest" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
-		<!-- simpleanalytics.com -->
-		<script async defer data-non-unique-hostnames="checkout.stripe.com" src="https://sa.webboot.io/latest.js"></script>
+		<!-- 100% Privacy Analytics -->
+		<script
+			async
+			defer
+			data-non-unique-hostnames="checkout.stripe.com"
+			src="https://sa.webboot.io/latest.js"
+		></script>
 		<script async src="https://sa.webboot.io/auto-events.js"></script>
-		<noscript><img src="https://sa.webboot.io/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+		<noscript
+			><img
+				src="https://sa.webboot.io/noscript.gif"
+				alt=""
+				referrerpolicy="no-referrer-when-downgrade"
+		/></noscript>
 	</body>
 </html>
