--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png" />
 		<link rel="manifest" href="/site.webmanifest" />
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="scrollbar-hide">
 		<div style="display: contents">%sveltekit.body%</div>
 		<!-- 100% Privacy Analytics -->
 		<script
